--- a/data/fyre.desktop
+++ b/data/fyre.desktop
@@ -6,4 +6,5 @@ Exec=fyre
 Terminal=false
 Type=Application
 Categories=Application;Graphics;2DGraphics;
-Icon=@DATADIR@fyre-48x48.png
+Icon=fyre-48x48.png
+MimeType=application/x-fyre-animation;image/png;
